# dott

./: ASCII.md  CUSTOM_MODULES.md  Cargo.toml  INSTALL.md  README.md
examples/: SYSINFO_EXAMPLE.md  config-comprehensive.toml  config-creative-modules.toml  config-logo-type-in-build.toml  config-multiple-entries.toml  config-personal.toml  config-sysinfo.toml  config-with-custom-logo.toml  config-with-image-logo.toml  config-with-modules-alt.toml  config-with-modules.toml  config.toml  custom-logo.txt
src/: ascii_image.rs  config.rs  main.rs
tests/: config_test.rs
wiki/: Configuration.md  Customization.md  Development.md  Examples.md  FAQ.md  Features.md  Getting-Started.md  Home.md  Installation.md  Modules.md  README.md  Troubleshooting.md  Usage.md
