[package]
name = "dott"
version = "0.1.0"
edition = "2025"
description = "clean tui with extreme customization"
liscence = "MIT"
repository = "https://github.com/commended/dott"
keywords = "tui, home"
catagories = "command-line-utilities"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
rand = "0.8"
sysinfo = "0.31"
