[package]
name = "dott-tui"
version = "0.1.0"
edition = "2021"
authors = ["August Ottenweller <OttenwellerAugust@gmail.com>"]
description = "clean tui with extreme customization"
license = "MIT"
repository = "https://github.com/commended/dott"
homepage = "https://github.com/commended/dott"
documentation = "https://github.com/commended/dott"
readme = "README.md"
keywords = ["tui", "terminal", "customization", "cli"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
rand = "0.8"
sysinfo = "0.31"
